--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
+    "paths": {
+      "my-UIcomponent-library": [
+        "./dist/my-uicomponent-library"
+      ]
+    },
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "isolatedModules": true,
@@ -29,6 +34,12 @@
     },
     {
       "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/my-uicomponent-library/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/my-uicomponent-library/tsconfig.spec.json"
     }
   ]
 }
