package name update

--- a/projects/my-uicomponent-library/package.json
+++ b/projects/my-uicomponent-library/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-uicomponent-library",
+  "name": "@neeyamui/my-uicomponent-library",
   "version": "0.0.1",
   "repository": {
     "type": "git",
